06.jibri-generated-Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jibri
  labels:
    app: jibri
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jibri
  template:
    metadata:
      labels:
        app: jibri
    spec:
      volumes:
      - name: jibri-config
        persistentVolumeClaim:
          claimName: jibri-config-pvc
#      hostAliases:
#      - ip: ""
#        hostnames:
#        - "prosody"
      containers:
      - name: jibri
        image: jitsi/jibri
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /j-config
          name: jvb-config
        ports:
        - containerPort: 30000
          protocol: UDP
        - containerPort: 30443
          protocol: TCP
      restartPolicy: Always
