jibri-template-Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jibri
  labels:
    app: jibri
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jibri
  template:
    metadata:
      labels:
        app: jibri
    spec:
      volumes:
      - name: jibri-config
        persistentVolumeClaim:
          claimName: jibri-config-pvc
      - name: dev-snd
        hostPath:
          path: /dev/snd
#      hostAliases:
#      - ip: "$XMPP_SERVER_ADDRESS"
#        hostnames:
#        - "$XMPP_SERVER"
      nodeSelector:
        sound: alsa
      securityContext:
        privileged: true
      containers:
      - name: jibri
        image: sunsingerus/jibri
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /j-config
          name: jibri-config
        - mountPath: /dev/snd
          name: dev-snd
        ports:
        - containerPort: $JVB_PORT
          protocol: UDP
        - containerPort: $JVB_TCP_PORT
          protocol: TCP
      restartPolicy: Always
