jicofo-generated.yaml
#apiVersion: v1
#kind: Service
#metadata:
#  name: jicofo
#spec:
#  selector:
#    app: jicofo
#  ports:
#    - port: 8888
#      targetPort: 8888
#      name: "port-8888"
#  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jicofo
  labels:
    app: jicofo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jicofo
  template:
    metadata:
      labels:
        app: jicofo
    spec:
      volumes:
      - name: jicofo-config
        persistentVolumeClaim:
          claimName: jicofo-pvc
      hostAliases:
      - ip: "100.69.9.12"
        hostnames:
        - "xmpp.meet.jitsi"
      containers:
      - name: jicofo
        image: jitsi/jicofo
        volumeMounts:
        - mountPath: /config
          name: jicofo-config
