jvb-template-Deployment.yaml
#---
###
### LoadBalancer TCP-only
###
#apiVersion: v1
#kind: Service
#metadata:
#  name: jvb-tcp
#  labels:
#    app: jvb
#  annotations:
#    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
#    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
#spec:
#  selector:
#    app: jvb
#  ports:
#  - name: "port-$JVB_TCP_PORT"
#    port: $JVB_TCP_PORT
#    targetPort: $JVB_TCP_PORT
#  type: LoadBalancer


#---
###
### LoadBalancer UDP-only
###
#apiVersion: v1
#kind: Service
#metadata:
#  name: jvb-udp
#  labels:
#    app: jvb
#  annotations:
#    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
#    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
#spec:
#  selector:
#    app: jvb
#  ports:
#  - name: "port-$JVB_PORT"
#    port: $JVB_PORT
#    protocol: UDP
#    targetPort: $JVB_PORT
#  type: LoadBalancer


#---
###
### LoadBalancer UDP + TCP
###
#apiVersion: v1
#kind: Service
#metadata:
#  name: jvb
#  labels:
#    app: jvb
#  annotations:
#    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
#    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
#spec:
#  selector:
#    app: jvb
#  ports:
#  - name: "port-$JVB_PORT"
#    port: $JVB_PORT
#    protocol: UDP
#    targetPort: $JVB_PORT
#  - name: "port-$JVB_TCP_PORT"
#    port: $JVB_TCP_PORT
#    targetPort: $JVB_TCP_PORT
#  type: LoadBalancer



---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jvb
  labels:
    app: jvb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jvb
  template:
    metadata:
      labels:
        app: jvb
    spec:
      volumes:
      - name: jvb-config
        persistentVolumeClaim:
          claimName: jvb-config-pvc
#      hostAliases:
#      - ip: "$XMPP_SERVER_ADDRESS"
#        hostnames:
#        - "$XMPP_SERVER"
      containers:
      - name: jvb
        image: "${JITSI_REPO}/jvb"
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /config
          name: jvb-config
        ports:
        - containerPort: $JVB_PORT
          protocol: UDP
        - containerPort: $JVB_TCP_PORT
          protocol: TCP
      restartPolicy: Always
