web-template-Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      volumes:
      - name: web-config
        persistentVolumeClaim:
          claimName: web-config-pvc
      - name: web-letsencrypt
        persistentVolumeClaim:
          claimName: web-letsencrypt-pvc
      - name: web-transcripts
        persistentVolumeClaim:
          claimName: web-transcripts-pvc
#      hostAliases:
#      - ip: "$XMPP_SERVER_ADDRESS"
#        hostnames:
#        - "$XMPP_SERVER"
      containers:
      - name: web
        image: "${JITSI_REPO}/web"
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /config
          name: web-config
        - mountPath: /etc/letsencrypt
          name: web-letsencrypt
        - mountPath: /usr/share/jitsi-meet/transcripts
          name: web-transcripts
        ports:
        - containerPort: 80
        - containerPort: 443
      restartPolicy: Always
