03.jicofo-generated.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jicofo
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
spec:
  selector:
    app: jicofo
  ports:
    - port: 8888
      targetPort: 8888
      name: "port-8888"
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jicofo
  labels:
    app: jicofo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jicofo
  template:
    metadata:
      labels:
        app: jicofo
    spec:
      volumes:
      - name: jicofo-config
        persistentVolumeClaim:
          claimName: jicofo-config-pvc
      hostAliases:
      - ip: "100.69.9.12"
        hostnames:
        - "xmpp.meet.jitsi"
      containers:
      - name: jicofo
        image: jitsi/jicofo
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /config
          name: jicofo-config
        readinessProbe:
          httpGet:
            path: /about/health
            port: 8888
            initialDelaySeconds: 5
            periodSeconds: 3
            timeoutSeconds: 60
        livenessProbe:
          httpGet:
            path: /about/health
            port: 8888
            initialDelaySeconds: 10
            periodSeconds: 3        
        ports:
        - containerPort: 8888
      restartpolicy: Always
