05.web-generated-ServiceClusterIP.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web-cip
  labels:
    app: web
spec:
  selector:
    app: web
  ports:
  - name: "port-80"
    port: 80
    targetPort: 80
  type: ClusterIP
