05.web-generated-ServiceNLB.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web-nlb
  labels:
    app: web
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
spec:
  selector:
    app: web
  ports:
  - name: "port-80"
    port: 80
    targetPort: 80
  - name: "port-443"
    port: 443
    targetPort: 443
  type: LoadBalancer
