05.web-generated-ServiceNodePort.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web-nodeport
  labels:
    app: web
spec:
  selector:
    app: web
  ports:
  - name: "port-80"
    protocol: TCP
    nodePort: 30080
    port: 30080
    targetPort: 80
  type: NodePort
