jibri-template-ServiceClusterIP.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jibri-cip
  labels:
    app: jibri
spec:
  selector:
    app: jibri
  ports:
  - name: "port-2222"
    port: 2222
    targetPort: 2222
  - name: "port-3333"
    port: 3333
    targetPort: 3333
  type: ClusterIP
