jvb-template.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jvb-tcp
  labels:
    app: jvb
spec:
  selector:
    app: jvb
  ports:
  - name: "port-$JVB_TCP_PORT"
    port: $JVB_TCP_PORT
    targetPort: $JVB_TCP_PORT
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: jvb-udp
  labels:
    app: jvb
spec:
  selector:
    app: jvb
  ports:
  - name: "port-$JVB_PORT"
    port: $JVB_PORT
    protocol: UDP
    targetPort: $JVB_PORT
  type: LoadBalancer
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: jvb-tcp
#  labels:
#    app: jvb
#spec:
#  selector:
#    app: jvb
#  ports:
#  - name: "port-$JVB_PORT"
#    port: $JVB_PORT
#    protocol: UDP
#    targetPort: $JVB_PORT
#  - name: "port-$JVB_TCP_PORT"
#    port: $JVB_TCP_PORT
#    targetPort: $JVB_TCP_PORT
#  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jvb
  labels:
    app: jvb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jvb
  template:
    metadata:
      labels:
        app: jvb
    spec:
      volumes:
      - name: jvb-config
        persistentVolumeClaim:
          claimName: jvb-pvc
      containers:
      - name: jvb
        image: jitsi/jvb
        volumeMounts:
        - mountPath: /config
          name: jvb-config
        ports:
        - containerPort: $JVB_PORT
          protocol: UDP
        - containerPort: $JVB_TCP_PORT
