prosody-generated.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prosody
spec:
  selector:
    app: prosody
  ports:
    - port: 5222
      targetPort: 5222
      name: "port-5222"
#    - port: 5269
#      targetPort: 5269
#      name: "port-5269"
    - port: 5280
      targetPort: 5280
      name: "port-5280"
    - port: 5347
      targetPort: 5347
      name: "port-5347"
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prosody
  labels:
    app: prosody
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prosody
  template:
    metadata:
      labels:
        app: prosody
    spec:
      volumes:
      - name: prosody-config
        persistentVolumeClaim:
          claimName: prosody-pvc
      containers:
      - name: prosody
        image: jitsi/prosody  
        volumeMounts:
        - mountPath: /config
          name: prosody-config
        ports:
        - containerPort: 5222
#        - containerPort: 5269
        - containerPort: 5280
        - containerPort: 5347
