web-generated.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: web
spec:
  selector:
    app: web
  ports:
  - name: "port-8000"
    port: 8000
    targetPort: 80
  - name: "port-8443"
    port: 8443
    targetPort: 443
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      volumes:
      - name: web-config
        persistentVolumeClaim:
          claimName: web-config-pvc
      - name: web-letsencrypt
        persistentVolumeClaim:
          claimName: web-letsencrypt-pvc
      - name: web-transcripts
        persistentVolumeClaim:
          claimName: web-transcripts-pvc
      containers:
      - name: web
        image: jitsi/web
        volumeMounts:
        - mountPath: /config
          name: web-config
        - mountPath: /etc/letsencrypt
          name: web-letsencrypt
        - mountPath: /usr/share/jitsi-meet/transcripts
          name: web-transcripts
        ports:
        - containerPort: 80
        - containerPort: 443
