web-template-ServiceNLB.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web-nlb
  labels:
    app: web
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
spec:
  selector:
    app: web
  ports:
  - name: "port-$HTTP_PORT"
    port: $HTTP_PORT
    targetPort: 80
  - name: "port-$HTTPS_PORT"
    port: $HTTPS_PORT
    targetPort: 443
  type: LoadBalancer
