web-template-ServiceNodePort.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web-nodeport
  labels:
    app: web
spec:
  selector:
    app: web
  ports:
  - name: "port-$HTTP_PORT"
    protocol: TCP
    nodePort: 30080
    port: 30080
    targetPort: $HTTP_PORT
  type: NodePort
