05.web-generated-Ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "web"
  annotations:
    cert-manager.io/issuer: "web-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: "web.jitsi.sunsingerus.com"
      http:
        paths:
          - path: "/"
            backend:
              serviceName: web-cip
              servicePort: 80
  tls:
    - hosts:
        - "web.jitsi.sunsingerus.com"
      secretName: web-tls
