jitsi.yaml
apiVersion: v1
kind: Service
metadata:
  name: prosody
spec:
  selector:
    app: prosody
  ports:
  - name: "port-5222"
    port: 5222
    targetPort: 5222
  - name: "port-5269"
    port: 5269
    targetPort: 5269
  - name: "port-5280"
    port: 5280
    targetPort: 5280
  - name: "port-5347"
    port: 5347
    targetPort: 5347
  type: ClusterIP

---
#apiVersion: v1
#kind: Service
#metadata:
#  name: prosody
#  annotations:
#    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
#    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
#spec:
#  selector:
#    app: prosody
#  ports:
#    - port: 5222
#      targetPort: 5222
#      name: "port-5222"
#    - port: 5269
#      targetPort: 5269
#      name: "port-5269"
#    - port: 5280
#      targetPort: 5280
#      name: "port-5280"
#    - port: 5347
#      targetPort: 5347
#      name: "port-5347"
#  type: LoadBalancer


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prosody
  labels:
    app: prosody
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prosody
  template:
    metadata:
      labels:
        app: prosody
    spec:
      volumes:
      - name: prosody-config
        persistentVolumeClaim:
          claimName: prosody-config-pvc
      - name: prosody-plugins
        persistentVolumeClaim:
          claimName: prosody-plugins-pvc
      containers:
      - name: prosody
        image: "sunsingerus/prosody"
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /config
          name: prosody-config
        - mountPath: /prosody-plugins-custom
          name: prosody-plugins
        ports:
        # Activated service 'c2s' on 5222
        - containerPort: 5222
        # Activated service 's2s' on 5269
        - containerPort: 5269
        # Activated service 'http' on 5280
        - containerPort: 5280
        # Activated service 'component' on 5347
        - containerPort: 5347
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: jicofo
spec:
  selector:
    app: jicofo
  ports:
    - port: 8888
      targetPort: 8888
      name: "port-8888"
  type: ClusterIP
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: jicofo
#  annotations:
#    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
#    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
#spec:
#  selector:
#    app: jicofo
#  ports:
#    - port: 8888
#      targetPort: 8888
#      name: "port-8888"
#  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jicofo
  labels:
    app: jicofo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jicofo
  template:
    metadata:
      labels:
        app: jicofo
    spec:
      volumes:
      - name: jicofo-config
        persistentVolumeClaim:
          claimName: jicofo-config-pvc
#      hostAliases:
#      - ip: ""
#        hostnames:
#        - "prosody"
      containers:
      - name: jicofo
        image: "sunsingerus/jicofo"
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /config
          name: jicofo-config
        ports:
        - containerPort: 8888
      restartPolicy: Always

#---
###
### LoadBalancer TCP-only
###
#apiVersion: v1
#kind: Service
#metadata:
#  name: jvb-tcp
#  labels:
#    app: jvb
#  annotations:
#    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
#    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
#spec:
#  selector:
#    app: jvb
#  ports:
#  - name: "port-30443"
#    port: 30443
#    targetPort: 30443
#  type: LoadBalancer


#---
###
### LoadBalancer UDP-only
###
#apiVersion: v1
#kind: Service
#metadata:
#  name: jvb-udp
#  labels:
#    app: jvb
#  annotations:
#    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
#    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
#spec:
#  selector:
#    app: jvb
#  ports:
#  - name: "port-30000"
#    port: 30000
#    protocol: UDP
#    targetPort: 30000
#  type: LoadBalancer


#---
###
### LoadBalancer UDP + TCP
###
#apiVersion: v1
#kind: Service
#metadata:
#  name: jvb
#  labels:
#    app: jvb
#  annotations:
#    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
#    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
#spec:
#  selector:
#    app: jvb
#  ports:
#  - name: "port-30000"
#    port: 30000
#    protocol: UDP
#    targetPort: 30000
#  - name: "port-30443"
#    port: 30443
#    targetPort: 30443
#  type: LoadBalancer



---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jvb
  labels:
    app: jvb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jvb
  template:
    metadata:
      labels:
        app: jvb
    spec:
      volumes:
      - name: jvb-config
        persistentVolumeClaim:
          claimName: jvb-config-pvc
#      hostAliases:
#      - ip: ""
#        hostnames:
#        - "prosody"
      containers:
      - name: jvb
        image: "sunsingerus/jvb"
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /config
          name: jvb-config
        ports:
        - containerPort: 30000
          protocol: UDP
        - containerPort: 30443
          protocol: TCP
      restartPolicy: Always

---
###
### NodePort UDP + TCP Service
###
apiVersion: v1
kind: Service
metadata:
  name: jvb
  labels:
    app: jvb
spec:
  selector:
    app: jvb
  ports:
  - name: "port-30000"
    protocol: UDP
    nodePort: 30000
    port: 30000
    targetPort: 30000
  - name: "port-30443"
    protocol: TCP
    nodePort: 30443
    port: 30443
    targetPort: 30443
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      volumes:
      - name: web-config
        persistentVolumeClaim:
          claimName: web-config-pvc
      - name: web-letsencrypt
        persistentVolumeClaim:
          claimName: web-letsencrypt-pvc
      - name: web-transcripts
        persistentVolumeClaim:
          claimName: web-transcripts-pvc
#      hostAliases:
#      - ip: ""
#        hostnames:
#        - "prosody"
      containers:
      - name: web
        image: "sunsingerus/web"
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /config
          name: web-config
        - mountPath: /etc/letsencrypt
          name: web-letsencrypt
        - mountPath: /usr/share/jitsi-meet/transcripts
          name: web-transcripts
        ports:
        - containerPort: 80
        - containerPort: 443
      restartPolicy: Always

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "web"
  annotations:
    cert-manager.io/issuer: "web-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: "web.jitsi.sunsingerus.com"
      http:
        paths:
          - path: "/"
            backend:
              serviceName: web-cip
              servicePort: 80
  tls:
    - hosts:
        - "web.jitsi.sunsingerus.com"
      secretName: web-tls

---
apiVersion: v1
kind: Service
metadata:
  name: web-cip
  labels:
    app: web
spec:
  selector:
    app: web
  ports:
  - name: "port-80"
    port: 80
    targetPort: 80
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: web-nodeport
  labels:
    app: web
spec:
  selector:
    app: web
  ports:
  - name: "port-80"
    protocol: TCP
    nodePort: 30080
    port: 30080
    targetPort: 80
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: web-nlb
  labels:
    app: web
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
spec:
  selector:
    app: web
  ports:
  - name: "port-80"
    port: 80
    targetPort: 80
  - name: "port-443"
    port: 443
    targetPort: 443
  type: LoadBalancer
